ALF-1002 Значение поля "Дата рождения" сохраненное и введенное не совпадают.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2812 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
+++ b/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
@@ -21,3 +21,9 @@ logicecm.base.message.enter-search-text=Enter search text
 contract.daterange= Date range
 lecm.form.upload= Upload
 dialog.createNew.title=Create new
+
+form.control.date-picker.entry.date.format=d/M/yyyy
+form.control.date-picker.display.date.format=DD/MM/YYYY
+
+form.control.date-picker.entry.time.format=HH:mm
+form.control.date-picker.display.time.format=HH:MM (24 Hour)
