ALF-949, ALF-950, ALF-951, ALF-953. Регламенты параллельного и последовательного согласования объединены в один. Лист согласования заполняется при старте согласования и корректно ведет себя при переназначении задачи. Избавился от лишних сущностей. Рефакторинг кода. Списки согласующих перенесены в общую папку и используются вместе и в параллельном, и в последовательном согласовании. В соответствии с новым регламентом изменена машина состояний по умолчанию. ВНИМАНИЕ! Потребуется редеплой машины состояний для договоров и дополнительных документов.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2821 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/repo/src/main/config/messages/lecm-approval-list.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-approval-list.properties
@@ -28,6 +28,7 @@ listconstraint.lecm-al_approval-item-decision-constraint.NO_DECISION=No decision
 listconstraint.lecm-al_approval-item-decision-constraint.APPROVED=Approved
 listconstraint.lecm-al_approval-item-decision-constraint.APPROVED_WITH_REMARK=Approved with remark
 listconstraint.lecm-al_approval-item-decision-constraint.REJECTED=Rejected
+listconstraint.lecm-al_approval-item-decision-constraint.REASSIGNED=Reassign
 
 listconstraint.lecm-al_approval-list-decision-constraint.NO_DECISION=No decision
 listconstraint.lecm-al_approval-list-decision-constraint.APPROVED=Approved
