--- a/lecm-approval/api/pom.xml
+++ b/lecm-approval/api/pom.xml
@@ -25,5 +25,10 @@
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-engine</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.alfresco</groupId>
+			<artifactId>alfresco-repository</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
