ALF-994 Изменения в карточке сотрудника. Поправлены переводы.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2827 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
+++ b/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
@@ -18,11 +18,11 @@ message.delete.success=Item was deleted
 
 logicecm.base.message.enter-search-text=Enter search text
 
-contract.daterange= Date range
-lecm.form.upload= Upload
+contract.daterange=Date range
+lecm.form.upload=Upload
 dialog.createNew.title=Create new
 
-message.upload.not-loaded=Photo not loadeddialog.createNew.title=Create new
+message.upload.not-loaded=Photo not loaded
 
 form.control.date-picker.entry.date.format=d/M/yyyy
 form.control.date-picker.display.date.format=DD/MM/YYYY
