ALF-982 : Редизайн главной страницы договоров и страницы со списком договоров
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2837 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -53,8 +53,8 @@ ru.it.contracts.signContractor=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\
 ru.it.contract.executed=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0435 \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0435 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430.
 
 page.lecm-contract_document=Contracts
-button.lecm-contract_document.new=New Contract
-label.create-lecm-contract_document=Create Contract
+button.lecm-contract_document.new=New contract
+label.create-lecm-contract_document=Create contract
 label.filter-lecm-contract_document=Contracts
 
 page.lecm-additional-document_additionalDocument=Additional Documents
