--- a/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/menu/contracts.menu.get.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/menu/contracts.menu.get.properties
@@ -1,4 +1,4 @@
 lecm.contracts.main.btn=Main
-lecm.contracts.list.btn=Contracts
+lecm.contracts.list.btn=Contracts list
 lecm.contracts.documents.btn=Contracts Documents
 lecm.contracts.reports.btn=Reports
