ALF-1033: Добалено восстановление архивных записей
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2871 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/positions/org.positions.grid.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/positions/org.positions.grid.get.properties
@@ -46,3 +46,11 @@ button.clear=Clear
 label.keywords=Keywords
 
 logicecm.dictionary.view=View
+
+message.restore.success=Item was restored
+message.restore.failure=Could not restore item
+message.confirm.restore.title=Restore Item
+message.confirm.restore.description=Are you sure you want to restore this item?
+message.confirm.restore.group.description=Are you sure you want to restore items?
+button.restore=Restore
+actions.restore-row=Delete
