--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/workroles/org.roles.grid.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/workroles/org.roles.grid.get.properties
@@ -46,3 +46,11 @@ button.clear=Clear
 label.keywords=Keywords
 
 logicecm.dictionary.view=View
+
+message.restore.success=Item was restored
+message.restore.failure=Could not restore item
+message.confirm.restore.title=Restore Item
+message.confirm.restore.description=Are you sure you want to restore this item?
+message.confirm.restore.group.description=Are you sure you want to restore items?
+button.restore=Restore
+actions.restore-row=Delete
