ALF-1037 Система удаляет роль, если на нее назначены сотрудники
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2878 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/workroles/org.roles.grid.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/workroles/org.roles.grid.get.properties
@@ -19,6 +19,8 @@ message.duplicate.failure=Could not duplicate item
 message.version = Version:
 message.save.success=Data Item saved successfully
 message.save.failure=Could not save Data Item
+message.delete.org.role.failure.employees.assigned=Orgstructure Role cannot be deleted. Employees assigned: {0}
+message.delete.org.role.error=Some error occured
 
 ## Drop-down Menus
 menu.select=Select
