--- a/lecm-orgstructure/share/src/main/resources/alfresco/web-extension/ru/it/lecm/orgstructure/form.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/web-extension/ru/it/lecm/orgstructure/form.properties
@@ -65,3 +65,6 @@ lecm-validation-uniqueness-help-id=The field should be unique
 lecm-validation-number-uniqueness-help-id=The field can contain only digits and should be unique
 
 lecm-orgstr_organization-boss=Boss
+
+lecm-orgstr_staffPosition-name=Position Name
+lecm-orgstr_workRole-name=Role Name
