ALF-1044: Отслеживание ошибок импорта справочников
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2897 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/all/toolbar/toolbar.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/all/toolbar/toolbar.get.properties
@@ -3,3 +3,7 @@ logicecm.dictionary.dictionary-list=Dictionary list
 button.import-xml=Upload XML
 
 title.select-file=Select file please
+title.import=Import
+title.import.info=Import info
+label.ignore-errors=Ignore errors
+label.import-file=Impotr file
