--- a/lecm-dictionary/repo/pom.xml
+++ b/lecm-dictionary/repo/pom.xml
@@ -80,6 +80,10 @@
 		    <groupId>org.slf4j</groupId>
 		    <artifactId>slf4j-api</artifactId>
 	    </dependency>
+	    <dependency>
+		    <groupId>javax.transaction</groupId>
+		    <artifactId>jta</artifactId>
+	    </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
