--- a/lecm-approval/repo/pom.xml
+++ b/lecm-approval/repo/pom.xml
@@ -98,6 +98,12 @@
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
+	 <dependency>
+	  <groupId>org.joda</groupId>
+	  <artifactId>com.springsource.org.joda.time</artifactId>
+	  <version>1.6.2</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 	<!--
 		The scm is required for the buildnumber-maven-plugin which is required
