ALF-1065: Исключение участника из Рабочей группы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2903 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/workforces/org.workforce.grid.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/workforces/org.workforce.grid.get.properties
@@ -46,3 +46,6 @@ button.clear=Clear
 label.keywords=Keywords
 
 logicecm.dictionary.view=View
+
+actions.deleteEmployee=Delete employee
+message.employee.role.delete.prompt=Dismiss Employee {0} from role {1}?
