[+] заготовка модуля "Редактор отчетов"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2919 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -214,6 +214,13 @@
 			<type>amp</type>
 			<scope>runtime</scope>
 		</dependency>
+        <dependency>
+            <groupId>ru.it.lecm.reports-editor</groupId>
+            <artifactId>reports-editor-share</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
 	</dependencies>
 
 	<build>
