--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -277,6 +277,13 @@
             <type>amp</type>
 			<scope>runtime</scope>
 		</dependency>
+        <dependency>
+            <groupId>ru.it.lecm.reports-editor</groupId>
+            <artifactId>reports-editor-repo</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
 	</dependencies>
 
 	<build>
