--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
 		<module>lecm-contractors</module>
 		<module>lecm-contracts-fake</module>
 		<module>lecm-approval</module>
+        <module>lecm-reports-editor</module>
 	</modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
