ALF-1058 Удаление элемента справочника. При удалении элемента через панель групповых действий запись восстанавливается. [+] Добавлена проверка на связанные элементы, при удалении записи в справочнике.  Выводится дополнительное сообщение предупреждающее, что имеются зависимые элементы.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2921 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid/datagrid.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid/datagrid.get.properties
@@ -18,6 +18,8 @@ message.delete.failure=Could not delete item
 message.duplicate.success=Item was duplicated
 message.duplicate.failure=Could not duplicate item
 message.version = Version:
+message.warning=There are dependents! Removal could result in undesirable consequences!
+message.error.contains.links=Unable to identify dependents.
 
 ## Drop-down Menus
 menu.select=Select
