ALF-1080 [-] Удалил неиспользуемый атрибут в модели. [+] Добавлены переводы к модели [~] Изменены настройки формы редактирования (для справочников)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2931 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/repo/src/main/config/messages/dictionary.properties
+++ b/lecm-dictionary/repo/src/main/config/messages/dictionary.properties
@@ -8,3 +8,10 @@ lecm-dic_dictionaryStructure.property.lecm-dic_active.title=Active
 lecm-currency_model.type.lecm-currency_currency.title=\u0421urrency
 lecm-currency_model.property.lecm-currency_alphabetic-code.title=Alphabetic code
 lecm-currency_model.property.lecm-currency_digital-code.title=Digital code
+
+lecm-dic_dictionaryStructure.property.lecm-dic_attributeForShow.title=Attribute for show
+lecm-dic_dictionaryStructure.property.lecm-dic_attributeForShow.description=Attribute for show
+lecm-dic_dictionaryStructure.property.lecm-dic_plane.title=Plane
+lecm-dic_dictionaryStructure.property.lecm-dic_plane.description=Plane
+lecm-dic_dictionaryStructure.property.lecm-dic_type.title=Type
+lecm-dic_dictionaryStructure.property.lecm-dic_type.description=Type
