ALF-907 [~]Изменено название столбца Автор на Инициатор
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2935 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -26,6 +26,7 @@ contract.istransmit=Transfer the right to strictly related documents
 contract.creator-ref=Employee
 contract.deprive.right=Delete the author of the participants of the document
 contract.totalAmount=Total sum
+contract.creator=Initiator
 
 contract.additionalDocumentType=Document type
 contract.deleteReason=Delete Reason
