--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/all/toolbar/toolbar.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/all/toolbar/toolbar.get.properties
@@ -7,3 +7,7 @@ title.import=Import
 title.import.info=Import info
 label.ignore-errors=Ignore errors
 label.import-file=Impotr file
+import.failure=Import failure
+import.failure.exception=Exception
+import.failure.stack-trace=StackTrace
+import.failure.showMore=Show more information
