--- a/lecm-orgstructure/share/src/main/resources/alfresco/web-extension/ru/it/lecm/orgstructure/form.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/web-extension/ru/it/lecm/orgstructure/form.properties
@@ -59,7 +59,8 @@ lecm-orgstr_staff-unit=Unit
 lecm-orgstr_boss=Boss
 lecm-orgstr_employee=Employee
 lecm-orgstr_primary-position=Is Primary
-lecm-orgstr_employee-business-roles=Busines Roles
+lecm-orgstr_employee-business-roles=Business Roles
+lecm-orgstr_employee-delegated-business-roles=Delegated Business Roles
 
 lecm-validation-uniqueness-help-id=The field should be unique
 lecm-validation-number-uniqueness-help-id=The field can contain only digits and should be unique
