[+] ALF-980. Работы по "машине состояний" [~] ALF-1066. Проблема совместимости lecm-statemachine-editor Также функция восстановления машины состояний по умолчанию перенесена в адресную строку (необходимо добавить параметр default)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2967 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -31,6 +31,10 @@ lecm-stmeditor_model.property.lecm-stmeditor_staticRoles.title=Static Roles
 lecm-stmeditor_model.property.lecm-stmeditor_dynamicRoles.title=Dynamic Roles
 lecm-stmeditor_model.property.lecm-stmeditor_permissionTypeValue.title=Permission
 
+lecm-stmeditor_model.property.lecm-stmeditor_version.title=Version
+lecm-stmeditor_model.property.lecm-stmeditor_publishDate.title=Publish Date
+lecm-stmeditor_model.property.lecm-stmeditor_publishComment.title=Comment
+
 lecm-stmeditor_model.property.lecm-stmeditor_timerDuration.title=Duration
 lecm-stmeditor_model.property.lecm-stmeditor_stopSubWorkflows.title=Stop Sub-Processes
 
