--- a/lecm-statemachine-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/statemachine-editor/editor.properties
+++ b/lecm-statemachine-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/statemachine-editor/editor.properties
@@ -39,3 +39,6 @@ statemachine.editor.form.label.process_receive=Process receive
 statemachine.editor.form.label.statemachine_sender=Statemachine Sender
 statemachine.editor.form.label.statemachine_receive=Statemachine Receiver
 statemachine.editor.form.label.process_sender=Process Sender
+statemachine.editor.form.label.versions=Versions
+
+
