ALF-1063 Отображение графиков работы на карточке сотрудника.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2980 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/web-extension/ru/it/lecm/orgstructure/form.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/web-extension/ru/it/lecm/orgstructure/form.properties
@@ -22,6 +22,7 @@ info.personal-info=Personal info
 info.personal-positions-and-groups=Employee Positions/Groups
 info.business-journal-history=History
 info.business-roles=Business Roles
+info.employee-schedule=Schedule
 
 message.employee.add.success=Employee successfully added
 message.employee.add.failure=Employee add failed
@@ -69,3 +70,6 @@ lecm-orgstr_organization-boss=Boss
 
 lecm-orgstr_staffPosition-name=Position Name
 lecm-orgstr_workRole-name=Role Name
+
+label.shedule-control.parent=Default schedule
+label.shedule-control.individual=Individual schedule
