ALF-1113 Редактирование базовых свойств (карточка отчета) [+]заготовки страниц для модуля Редактор Отчетов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2982 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -1,2 +1,16 @@
 label.report.displayName=Name
-page.lecm.reports-editor.title=Reports
+
+page.lecm.reports-editor=Reports Editor
+
+page.lecm.reports-editor.templates=Reports Editor > Templates
+page.lecm.reports-editor.sources=Reports Editor > Data Sources
+page.lecm.reports-editor.report-types=Reports Editor > Report Types
+page.lecm.reports-editor.providers=Reports Editor > Providers
+page.lecm.reports-editor.column-types=Reports Editor > Column Types
+page.lecm.reports-editor.param-types=Reports Editor > Param Types
+
+page.lecm.reports-editor.add-source=Reports Editor > Report > Set Source
+page.lecm.reports-editor.edit-source=Reports Editor > Report > Edit Source
+page.lecm.reports-editor.edit-template=Reports Editor > Report > Edit Template
+
+
