[~] доработка контрола для загрузки файлов - прописывается опция mandatory [+]ALF-1110 Список шаблонов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2996 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -13,4 +13,7 @@ page.lecm.reports-editor.add-source=Reports Editor > Report > Set Source
 page.lecm.reports-editor.edit-source=Reports Editor > Report > Edit Source
 page.lecm.reports-editor.edit-template=Reports Editor > Report > Edit Template
 
+label.new-template.btn=New Template
+label.create-template.title=Create Template
+
 
