--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -16,4 +16,7 @@ page.lecm.reports-editor.edit-template=Reports Editor > Report > Edit Template
 label.new-template.btn=New Template
 label.create-template.title=Create Template
 
+header.reports-editor.label=Reports Editor
+header.reports-editor.description=Reports Editor
+
 
