--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -13,8 +13,18 @@ page.lecm.reports-editor.add-source=Reports Editor > Report > Set Source
 page.lecm.reports-editor.edit-source=Reports Editor > Report > Edit Source
 page.lecm.reports-editor.edit-template=Reports Editor > Report > Edit Template
 
+label.new-report.btn=New Report
+label.create-report.title=Create Report
 label.new-template.btn=New Template
 label.create-template.title=Create Template
+label.new-column-type.btn=New Column Type
+label.create-column-type.title=Create Column Type
+label.new-param-type.btn=New Param Type
+label.create-param-type.title=Create Param Type
+label.new-provider.btn=New Provider
+label.create-provider.title=Create Provider
+label.new-report-type.btn=New Report Type
+label.create-report-type.title=Create Report Type
 
 header.reports-editor.label=Reports Editor
 header.reports-editor.description=Reports Editor
