ALF-999 Изменить способ редактирования таймаута статуса и поведения при таймауте
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3011 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -35,7 +35,7 @@ lecm-stmeditor_model.property.lecm-stmeditor_version.title=Version
 lecm-stmeditor_model.property.lecm-stmeditor_publishDate.title=Publish Date
 lecm-stmeditor_model.property.lecm-stmeditor_publishComment.title=Comment
 
-lecm-stmeditor_model.property.lecm-stmeditor_timerDuration.title=Duration
+lecm-stmeditor_model.property.lecm-stmeditor_timerDuration.title=Time-out
 lecm-stmeditor_model.property.lecm-stmeditor_stopSubWorkflows.title=Stop Sub-Processes
 
 #Status Properties
@@ -49,6 +49,7 @@ lecm-stmeditor_model.property.lecm-stmeditor_startScriptAction.title=Script exec
 lecm-stmeditor_model.property.lecm-stmeditor_endStartWorkflow.title=Start workflow on state finish
 lecm-stmeditor_model.property.lecm-stmeditor_endScriptAction.title=Script execution on state finish
 lecm-stmeditor_model.property.lecm-stmeditor_endEventScriptAction.title=Script execution on state finish
+lecm-stmeditor_model.property.lecm-stmeditor_startTimerAction.title=Time-out
 
 lecm-stmeditor_model.property.lecm-stmeditor_scriptLabel.title=Title
 lecm-stmeditor_model.property.lecm-stmeditor_actionScript.title=Script
