[+]ALF-1111  Список наборов данных
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3024 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
@@ -38,8 +38,10 @@ lecm-rpeditor_model.property.lecm-rpeditor_dataSourceCode.description=Data Sourc
 
 lecm-rpeditor_model.type.lecm-rpeditor_reportDataColumn.title=Data Column
 lecm-rpeditor_model.type.lecm-rpeditor_reportDataColumn.description=Data Column
-lecm-rpeditor_model.property.lecm-rpeditor_dataColumnCod.title=Data Column Code
-lecm-rpeditor_model.property.lecm-rpeditor_dataColumnCod.description=Data Column Code
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnCode.title=Data Column Code
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnCode.description=Data Column Code
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnExpression.title=Data Column Expression
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnExpression.description=Data Column Expression
 lecm-rpeditor_model.association.lecm-rpeditor_columnTypeAssoc.title=Data Column Type
 lecm-rpeditor_model.association.lecm-rpeditor_columnTypeAssoc.description=Data Column type
 lecm-rpeditor_model.association.lecm-rpeditor_columnParameterTypeAssoc.title=Data Column Parameter Type
