--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -25,6 +25,10 @@ label.new-provider.btn=New Provider
 label.create-provider.title=Create Provider
 label.new-report-type.btn=New Report Type
 label.create-report-type.title=Create Report Type
+label.new-source.btn=New Data Source
+label.create-source.title=Create Source
+label.new-source-column.btn=New Source Column
+label.create-source-column.title=Create Source Column
 
 header.reports-editor.label=Reports Editor
 header.reports-editor.description=Reports Editor
