Отчёты - сервисная часть: [ALF-1145] объектная модель [ALF-1146] генерация описания метаданных ds-xml [ALF-1150] генерация отчёта (пока без реализации запроса с обобщёнными параметрами)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3050 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-jasperreports-forms/repo/pom.xml
+++ b/lecm-jasperreports-forms/repo/pom.xml
@@ -22,6 +22,7 @@
 		<module.log.level>debug</module.log.level>
 		<dependency.opencmis.version>0.7.0</dependency.opencmis.version>
 		<xalan.version>2.5.1</xalan.version>
+		<xerces.version>2.8.0</xerces.version>
 	</properties>
 
 	<!--
@@ -101,6 +102,11 @@
 			<groupId>xalan</groupId>
 			<artifactId>xalan</artifactId>
 			<version>${xalan.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>${xerces.version}</version>
 		</dependency>
 
 		<dependency>
