--- a/lecm-jasperreports-forms/api/pom.xml
+++ b/lecm-jasperreports-forms/api/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>jasperreports-fonts</artifactId>
 			<version>${jasperreports.fonts.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.extensions.surf</groupId>
+			<artifactId>spring-webscripts</artifactId>
+		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 
 		<dependency>
