--- a/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
+++ b/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
@@ -12,6 +12,9 @@ logicecm.base.select-tree-element=Please, select element from tree
 logicecm.base.create-new-button.label=+
 logicecm.base.show-arhive.label=Show arhive
 
+logicecm.base.error=Error
+logicecm.base.error.show.details=Show details
+
 label.limit_reached=Limit reached: records were found more than returned. Please edit your search query to get the other records.
 
 message.delete.success=Item was deleted
