--- a/lecm-base/repo/pom.xml
+++ b/lecm-base/repo/pom.xml
@@ -81,6 +81,11 @@
 		    <artifactId>orgstructure-repo-api</artifactId>
 		    <version>${project.version}</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>ru.it.lecm.documents</groupId>
+		    <artifactId>documents-repo-api</artifactId>
+		    <version>${project.version}</version>
+	    </dependency>
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
