--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
@@ -30,6 +30,8 @@ lecm-rpeditor_model.type.lecm-rpeditor_reportTemplate.title=Report Template
 lecm-rpeditor_model.type.lecm-rpeditor_reportTemplate.description=Report Template
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateFile.title=Report Template File
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateFile.description=Report Template File
+lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateType.title=Report Template Type
+lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateType.description=Report Template Type
 
 lecm-rpeditor_model.type.lecm-rpeditor_reportDataSource.title=Data Source
 lecm-rpeditor_model.type.lecm-rpeditor_reportDataSource.description=Data Source
