[~] ALF-923: Сценарий последовательного согласования [~] ALF-945: Реализовать универсальную форму запуска согласования согласно ТЗ [-] ALF-1144: Дизайнбаги процесса согласования
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3081 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/share/src/main/resources/alfresco/web-extension/ru/it/lecm/approval/form.properties
+++ b/lecm-approval/share/src/main/resources/alfresco/web-extension/ru/it/lecm/approval/form.properties
@@ -1,3 +1,7 @@
+logicecm.workflow.runAction.label=Start Approval Process
+
+label.assingees-list-name=List Name
+
 lecm-al_approval-item-employee-position=Position
 lecm-al_approval-item-employee-unit=Unit
 
