--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components-attacmnets/header/document.attachment.header.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components-attacmnets/header/document.attachment.header.get.properties
@@ -1,2 +1,3 @@
 banner.not-found=The item cannot be found. Either it has been removed or it has never existed.
-label.modified-by-user-on-date=Modified by {0} on {1}
+label.version=Version
+label.modified-by-user-on-date=Modified: {0}
