[ALF-1197] В отчёте "Реестр договоров" введён диапазон для суммы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3111 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model.properties
@@ -7,6 +7,8 @@ lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-lis
 
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-actual-only.title=Anly actual
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-sum.title=Sum
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-sum-low.title=Contract sum from
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-sum-up.title=Upto
 
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-list-contractor.title=Contractor
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-list-contract-type.title=Type
