[~]рефакторинг меню  Редактора Отчетов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3116 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/menu/reports-editor.menu.get.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/menu/reports-editor.menu.get.properties
@@ -1,4 +1,5 @@
 lecm.reports-editor.reports.btn=Reports
+lecm.reports-editor.report-info.btn=Report Settings
 lecm.reports-editor.addSource.btn=Add Source
 lecm.reports-editor.editSource.btn=Edit Source
 lecm.reports-editor.editTemplate.btn=Edit Template
