--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -9,6 +9,7 @@ page.lecm.reports-editor.providers=Reports Editor > Providers
 page.lecm.reports-editor.column-types=Reports Editor > Column Types
 page.lecm.reports-editor.param-types=Reports Editor > Param Types
 
+page.lecm.reports-editor.report-info=Reports Editor > Report > Info
 page.lecm.reports-editor.add-source=Reports Editor > Report > Set Source
 page.lecm.reports-editor.edit-source=Reports Editor > Report > Edit Source
 page.lecm.reports-editor.edit-template=Reports Editor > Report > Edit Template
