--- a/lecm-contractors/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contractors/form.properties
+++ b/lecm-contractors/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contractors/form.properties
@@ -18,7 +18,7 @@ page.representatives.description=Representatives List
 
 lecm-representative_computed-representative-fullname=Representative's Full Name
 
-
+contr-name=Contractor
 
 
 ################################################################
