[ALF-1193]Отчёты с фильтром по контрагентам теперь допускают множественный выбор
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3119 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model.properties
@@ -10,7 +10,7 @@ lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-lis
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-sum-low.title=Contract sum from
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-sum-up.title=Upto
 
-lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-list-contractor.title=Contractor
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-list-contractor.title=Contractor(s)
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-list-contract-type.title=Type
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-list-contract-subject.title=Subject
 
@@ -23,7 +23,7 @@ lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-reg-befor
 
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-report-type.title=Measure
 
-lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contractor.title=Contractor
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contractor.title=Contractor(s)
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contract-type.title=Type
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contract-subject.title=Subject
 
@@ -39,7 +39,7 @@ lecm-contract-reports_reports-forms.property.lecm-contract-reports_dfc-sum-up.ti
 
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_dfc-report-type.title=Measure
 
-lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contractor.title=Contractor
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contractor.title=Contractor(s)
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contract-type.title=Type
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contract-subject.title=Subject
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contract-initiator.title=Author
