--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
@@ -42,6 +42,8 @@ lecm-rpeditor_model.type.lecm-rpeditor_reportDataColumn.title=Data Column
 lecm-rpeditor_model.type.lecm-rpeditor_reportDataColumn.description=Data Column
 lecm-rpeditor_model.property.lecm-rpeditor_dataColumnCode.title=Data Column Code
 lecm-rpeditor_model.property.lecm-rpeditor_dataColumnCode.description=Data Column Code
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnClass.title=Data Column Class
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnClass.description=Data Column Class
 lecm-rpeditor_model.property.lecm-rpeditor_dataColumnExpression.title=Data Column Expression
 lecm-rpeditor_model.property.lecm-rpeditor_dataColumnExpression.description=Data Column Expression
 lecm-rpeditor_model.association.lecm-rpeditor_columnTypeAssoc.title=Data Column Type
@@ -53,7 +55,9 @@ lecm-rpeditor_model.type.lecm-rpeditor_reportDescriptor.title=Report Descriptor
 lecm-rpeditor_model.type.lecm-rpeditor_reportDescriptor.description=Report Descriptor
 lecm-rpeditor_model.property.lecm-rpeditor_reportCode.title=Report Code
 lecm-rpeditor_model.property.lecm-rpeditor_reportCode.description=Report Code
-lecm-rpeditor_model.property.lecm-rpeditor_reportObjectsMultiplicity.title=\u041EReport Multiplicity
+lecm-rpeditor_model.property.lecm-rpeditor_reportDocType.title=Report Doc Type
+lecm-rpeditor_model.property.lecm-rpeditor_reportDocType.description=Report Doc Type
+lecm-rpeditor_model.property.lecm-rpeditor_reportObjectsMultiplicity.title=Report Multiplicity
 lecm-rpeditor_model.property.lecm-rpeditor_reportObjectsMultiplicity.description=Report Multiplicity?
 lecm-rpeditor_model.property.lecm-rpeditor_reportQuery.title=Report Query
 lecm-rpeditor_model.property.lecm-rpeditor_reportQuery.description=Report Query
