--- a/lecm-reports-editor/share/pom.xml
+++ b/lecm-reports-editor/share/pom.xml
@@ -32,6 +32,19 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.extensions.surf</groupId>
+            <artifactId>spring-webscripts</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-web-framework-commons</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.reports</groupId>
+            <artifactId>lecm-reports-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 
