--- a/lecm-documents/share/src/main/resources/alfresco/web-extension/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/web-extension/ru/it/lecm/documents/form.properties
@@ -44,3 +44,8 @@ form.logicecm.view=Viewing History
 
 page.documents-list=Documents List
 page.documents-list.filter=(filtered)
+
+page.reports-list=Reports List
+documents.report.success=Report formed succesfully
+documents.report.failure=Report failed
+
