--- a/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/template-edit/template-edit.main.get.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/template-edit/template-edit.main.get.properties
@@ -3,3 +3,6 @@ label.current-template=Current Template
 label.select-template=Current Template
 
 label.unavaiable-page=Unavaiable page
+
+button.new-row=New Template
+label.create-report-dialog=Create Template
