ALF-959,ALF-1158: аттрибутивный поиск в справочниках
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3157 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar/toolbar.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar/toolbar.get.properties
@@ -2,6 +2,7 @@ button.new-row=New Item
 button.print=Print
 button.rss-feed=RSS Feed
 button.search=Search
+button.ex_search=External search
 button.export-xml=Export XML
 button.import-xml=Import XML
 button.export-csv=Export CSV
