[~] переписанный интерфейс для Выбора/Настройки Набора Данных
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3161 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -30,6 +30,9 @@ label.new-source.btn=New Data Source
 label.create-source.title=Create Source
 label.new-source-column.btn=New Source Column
 label.create-source-column.title=Create Source Column
+label.select-source.btn=Select from Template
+label.select-source.title=Select from Template
+label.select.btn=Select
 
 header.reports-editor.label=Reports Editor
 header.reports-editor.description=Reports Editor
