--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 		<slf4j.version>1.5.11</slf4j.version>
 		<spring.security.version>3.1.0.RC2</spring.security.version>
 		<acegisecurity.version>0.8.2</acegisecurity.version>
-        <platform.version>0.1.0</platform.version>
+        <platform.version>${project.version}</platform.version>
         <buildNumber>1</buildNumber>
     </properties>
 
@@ -452,9 +452,21 @@
                                               -->
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>versions-maven-plugin</artifactId>
+                    <version>2.1</version>
+                </plugin>
 
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+            </plugin>
+
+        </plugins>
     </build>
 
     <profiles>
