[fix] выделение строки в гриде с наборами [fix] коректная работа evaluator для выбора НД [fix]добавлено групповое удаление на страницу "настройка набора данных"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3169 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/data-source-edit/source-edit.get.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/data-source-edit/source-edit.get.properties
@@ -4,5 +4,8 @@ label.new-column.btn=New Data Column
 label.save-as-source.btn=Save As
 label.prev.btn=Prev
 label.next.btn=Next
+label.delete.btn=Delete
 
 label.create-column.title=Create Column
+
+message.confirm.delete.group.description=Are you sure you want to delete items?
