Добавлен модель "Поручения"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3182 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
 		<module>lecm-contracts-fake</module>
 		<module>lecm-approval</module>
         <module>lecm-reports-editor</module>
+        <module>lecm-errands</module>
 	</modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
