--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -221,6 +221,13 @@
             <scope>runtime</scope>
             <type>amp</type>
         </dependency>
+		<dependency>
+            <groupId>ru.it.lecm.errands</groupId>
+            <artifactId>errands-share</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
 	</dependencies>
 
 	<build>
