ALF-1210: Дополнена модель данных "Договора"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3184 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
@@ -1,8 +1,38 @@
 lecm-errands_model.type.lecm-errands_document.title=Errands
 lecm-errands_model.type.lecm-errands_document.description=Errands
 
+lecm-errands_model.property.lecm-errands_title.title=Title
+lecm-errands_model.property.lecm-errands_title.description=Title
 lecm-errands_model.property.lecm-errands_number.title=Errand number
 lecm-errands_model.property.lecm-errands_number.description=Errand number
+lecm-errands_model.property.lecm-errands_content.title=Content
+lecm-errands_model.property.lecm-errands_content.description=Content
+lecm-errands_model.property.lecm-errands_is-important.title=Is important
+lecm-errands_model.property.lecm-errands_is-important.description=Is important
+lecm-errands_model.property.lecm-errands_limitation-date.title=Limitation date
+lecm-errands_model.property.lecm-errands_limitation-date.description=Limitation date
+lecm-errands_model.property.lecm-errands_start-date.title=Start date
+lecm-errands_model.property.lecm-errands_start-date.description=Start date
+lecm-errands_model.property.lecm-errands_just-in-time.title=Just in time
+lecm-errands_model.property.lecm-errands_just-in-time.description=Just in time
+lecm-errands_model.property.lecm-errands_without-initiator-approval.title=Without initiator approval
+lecm-errands_model.property.lecm-errands_without-initiator-approval.description=Without initiator approval
+lecm-errands_model.property.lecm-errands_end-date.title=End date
+lecm-errands_model.property.lecm-errands_end-date.description=End date
+lecm-errands_model.property.lecm-errands_execution-report.title=Execution report
+lecm-errands_model.property.lecm-errands_execution-report.description=Execution report
+lecm-errands_model.property.lecm-errands_execution-date.title=Execution date
+lecm-errands_model.property.lecm-errands_execution-date.description=Execution date
+lecm-errands_model.property.lecm-errands_is-expired.title=Is expired
+lecm-errands_model.property.lecm-errands_is-expired.description=Is expired
+lecm-errands_model.property.lecm-errands_is-short.title=Is short
+lecm-errands_model.property.lecm-errands_is-short.description=Is short
 
-lecm-errands_model.association.lecm-errands_initiator.title=Initiator
-lecm-errands_model.association.lecm-errands_initiator.description=Initiator
+lecm-errands_model.association.lecm-errands_initiator-assoc.title=Initiator
+lecm-errands_model.association.lecm-errands_initiator-assoc.description=Initiator
+lecm-errands_model.association.lecm-errands_executor-assoc.title=Executor
+lecm-errands_model.association.lecm-errands_executor-assoc.description=Executor
+lecm-errands_model.association.lecm-errands_controller-assoc.title=Controller
+lecm-errands_model.association.lecm-errands_controller-assoc.description=Controller
+lecm-errands_model.association.lecm-errands_coexecutors-assoc.title=Coexecutors
+lecm-errands_model.association.lecm-errands_coexecutors-assoc.description=Coexecutors
