--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
@@ -1,5 +1,5 @@
-lecm-errands_model.type.lecm-errands_document.title=Errands
-lecm-errands_model.type.lecm-errands_document.description=Errands
+lecm-errands_model.type.lecm-errands_document.title=Errand
+lecm-errands_model.type.lecm-errands_document.description=Errand
 
 lecm-errands_model.property.lecm-errands_title.title=Title
 lecm-errands_model.property.lecm-errands_title.description=Title
