--- a/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/data-source-edit/source-edit.get.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/data-source-edit/source-edit.get.properties
@@ -7,5 +7,8 @@ label.next.btn=Next
 label.delete.btn=Delete
 
 label.create-column.title=Create Column
+label.save-as-source.title=Save a set of data
 
 message.confirm.delete.group.description=Are you sure you want to delete items?
+message.copy.success=The data set was saved successfully
+message.copy.failure=Unable to save the data set
