ALF-1240: Добавлен справочник "Тематика"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3194 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
@@ -36,3 +36,9 @@ lecm-errands_model.association.lecm-errands_controller-assoc.title=Controller
 lecm-errands_model.association.lecm-errands_controller-assoc.description=Controller
 lecm-errands_model.association.lecm-errands_coexecutors-assoc.title=Coexecutors
 lecm-errands_model.association.lecm-errands_coexecutors-assoc.description=Coexecutors
+lecm-errands_model.association.lecm-errands_links-assoc.title=Links
+lecm-errands_model.association.lecm-errands_links-assoc.description=Links
+lecm-errands_model.association.lecm-errands_subject-assoc.title=Subject
+lecm-errands_model.association.lecm-errands_subject-assoc.description=Subject
+lecm-errands_model.association.lecm-errands_execution-links-assoc.title=Links
+lecm-errands_model.association.lecm-errands_execution-links-assoc.description=Links
