--- a/lecm-jasperreports-forms/api/pom.xml
+++ b/lecm-jasperreports-forms/api/pom.xml
@@ -21,6 +21,8 @@
 		<alfproject.version>4.0</alfproject.version>
 		<jasperreports.fonts.version>4.0.0</jasperreports.fonts.version>
 		<!-- <jasperreports.version>5.0</jasperreports.version> -->
+		<xalan.version>2.5.1</xalan.version>
+		<xerces.version>2.8.0</xerces.version>
 	</properties>
 
 	<!--
@@ -46,6 +48,17 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>${xalan.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>${xerces.version}</version>
 		</dependency>
 
 		<dependency>
