ALF-1235: Глобальные настройки поручений - заготовка
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3207 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
+++ b/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
@@ -32,3 +32,5 @@ form.control.date-picker.display.date.format=DD/MM/YYYY
 
 form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24 Hour)
+
+tool.group.lecm-settings=Logic ECM settings
