--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
@@ -42,3 +42,9 @@ lecm-errands_model.association.lecm-errands_subject-assoc.title=Subject
 lecm-errands_model.association.lecm-errands_subject-assoc.description=Subject
 lecm-errands_model.association.lecm-errands_execution-links-assoc.title=Links
 lecm-errands_model.association.lecm-errands_execution-links-assoc.description=Links
+
+
+lecm-errands_model.type.lecm-errands_settings.title=Errand settings
+lecm-errands_model.type.lecm-errands_settings.description=Errand settings
+lecm-errands_model.property.lecm-errands_settings-mode-choosing-executors.title=Mode choosing executors
+lecm-errands_model.property.lecm-errands_settings-mode-choosing-executors.description=Mode choosing executors
