--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -6,3 +6,9 @@ label.filter-lecm-errands_document=Errands
 page.errands.filter.label=(filtered)
 
 header.errands-list.label=Errands
+
+tool.errands-settings.label=Errands settings
+tool.errands-settings.description=Errands settings
+
+label.mode-choosing.unit=In organization unit
+label.mode-choosing.organization=In organization
