--- a/lecm-errands/repo/pom.xml
+++ b/lecm-errands/repo/pom.xml
@@ -68,6 +68,11 @@
 		    <artifactId>business-journal-repo-api</artifactId>
 		    <version>${project.version}</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>ru.it.lecm.documents</groupId>
+		    <artifactId>documents-repo-api</artifactId>
+		    <version>${project.version}</version>
+	    </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
