ALF-1235: Глобальные настройки поручений - добавлены переводы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3212 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
@@ -1,3 +1,6 @@
+listconstraint.lecm-errands_settings-mode-choosing-executors-const.ORGANIZATION=In organization
+listconstraint.lecm-errands_settings-mode-choosing-executors-const.UNIT=In organization unit
+
 lecm-errands_model.type.lecm-errands_document.title=Errand
 lecm-errands_model.type.lecm-errands_document.description=Errand
 
